# homework12

./: .example.env  main.py  pyproject.toml
src/: schemas.py
src/db/: db.py  models.py
src/router/: contacts.py
src/routers/: auth.py
src/services/: auth.py
